# dranspose

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  buildimage.yml  docs.yaml  test-balder.yml  test.yaml
applications/hdf5_stream/: index.html
applications/overview/: index.html
deployment/capturing/: index.html
deployment/kubernetes/: index.html
deployment/sardana/: index.html
docs/: CNAME  index.md
docs/applications/: hdf5_stream.md  overview.md
docs/deployment/: capturing.md  kubernetes.md  sardana.md  upgrades.md
docs/nobugs-2024-09-25/: main.tex
docs/poster-2024-01-15/: .gitignore  main.tex  maxivlogo.eps  reducer.py  values.yaml  viewer.py  worker.py
docs/reference/: high_rate.md  middlewares.md  trigger_map.md
docs/reference/internals/: controller-api.json  controller.md  distributed_service.md  ingester.md  reducer.md  worker.md
docs/reference/protocols/: STINS.md  albaem.md  contrast.md  eiger_legacy.md  events.md  lecroy.md  pcap.md  positioncap.md  sardana.md  xspress.md
docs/seminar-2023-11-30/: main.tex
docs/seminar-2024-06-13/: main.tex
docs/tutorials/: analysis.md  ingesters.md  viewers.md
dranspose/: cli.py  control.py  controller.py  debug_worker.py  distributed.py  event.py  ingester.py  mapping.py  parameters.py  protocol.py  reducer.py  replay.py  utils.py  worker.py  workload_generator.py
dranspose/data/: albaem.py  contrast.py  eiger_legacy.py  lecroy.py  pcap.py  positioncap.py  proto.py  protocol.py  sardana.py  stream1.py  xspress3.py  xspress3_stream.py
dranspose/frontend/: index.html
dranspose/helpers/: h5dict.py  h5dump.py  h5types.py  jsonpath_slice_ext.py  utils.py
dranspose/ingesters/: __init__.py  dummy_alba.py  dummy_eiger.py  dummy_multi.py  dummy_orca.py  http_sardana.py  stins_parallel.py  streaming_contrast.py  streaming_single.py  streaming_xspress3.py  tcp_positioncap.py  zmqpull_eiger_legacy.py  zmqpull_single.py  zmqsub_albaem.py  zmqsub_contrast.py  zmqsub_lecroy.py  zmqsub_pcap.py  zmqsub_xspress3.py
dranspose/middlewares/: contrast.py  eiger_legacy.py  lecroy.py  pcap.py  positioncap.py  sardana.py  stream1.py  xspress.py
examples/dummy/: reducer.py  source.py  sw_trig_ingester.py  worker.py
examples/dynamic_reduce/: reducer.py  source.py
examples/params/: reducer.py  worker.py
examples/parser/: eigerlegacy.py  lecroy.py  pcap.py  positioncap.py
examples/repub/: worker.py
examples/slow/: reducer.py  worker.py
examples/test/: reducer.py  worker.py
examples/timing/: reducer.py  worker.py
perf/: Cargo.toml  Dockerfile  test_rust_ingest.py
perf/src/: control_plane.rs  data_plane.rs  dranspose.rs  main.rs
reference/internals/controller/: index.html
reference/internals/distributed_service/: index.html
reference/internals/ingester/: index.html
reference/internals/reducer/: index.html
reference/internals/worker/: index.html
reference/middlewares/: index.html
reference/protocols/STINS/: index.html
reference/protocols/albaem/: index.html
reference/protocols/contrast/: index.html
reference/protocols/eiger_legacy/: index.html
reference/protocols/events/: index.html
reference/protocols/lecroy/: index.html
reference/protocols/pcap/: index.html
reference/protocols/positioncap/: index.html
reference/protocols/sardana/: index.html
reference/protocols/xspress/: index.html
reference/trigger_map/: index.html
search/: search_index.json
seminar-2024-06-13/: main.aux  main.nav  main.out  main.vrb
tests/: aux_payloads.py  conftest.py  fixtures.py  stream1.py  test_albaem.py  test_basics.py  test_cbordumps.py  test_cli.py  test_close_context.py  test_concurrent_restart_controller.py  test_controller.py  test_custom_ingester.py  test_data_streams.py  test_debugworker.py  test_default_parameters.py  test_discard_scan.py  test_distributed_model.py  test_dumping.py  test_eiger_legacy.py  test_empty_event.py  test_empty_parameters.py  test_h5dict.py  test_h5dump.py  test_huge_map.py  test_ingest_stats.py  test_jsonpath.py  test_k8s_bench.py  test_leave_pcap_alone.py  test_lecroy.py  test_lecroy_zmq.py  test_log_stream.py  test_mapping.py  test_mapping_parts.py  test_mapping_sequence.py  test_maxrate.py  test_mulitple_scans.py  test_multi_arm_scan.py  test_multi_uvicorn.py  test_multiple_scans.py  test_outside_scan_push.py  (+37 more)
tests/analysis/: bandwidth.ipynb
tests/data/: albaem-dump.cbors  albaem-dump.pkls  build_git_meta.json  contrast-dump.cbors  contrast-dump.pkls  dump_xrd.cbors  eiger-small.cbors  eiger-small.pkls  maui-02-continuous-3.cbor  pcap-zmq.cbors  pcap-zmq.pkls  xspress3-dump.cbors  xspress3-dump.pkls  xspress3-multipart.cbors  xspress3-multipart.pkls  xspress3mini-dump20.cbors  xspress3mini-dump20.pkls
tutorials/analysis/: index.html
tutorials/ingesters/: index.html
tutorials/viewers/: index.html
