[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dranspose"
authors = [
  { name="Felix Engelmann", email="felix-github@nlogn.org" },
]
description = "A stream matrix transposition framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzmq",
    "redis[hiredis]",
    "fastapi",
    "uvicorn",
    "numpy",
    "requests",
    "pydantic",
    "pydantic-settings",
    "jsonpath-ng",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["dranspose*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aiohttp",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[project.scripts]
dranspose = "dranspose.cli:run"

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/felix-engelmann/dranspose"
"Bug Tracker" = "https://github.com/felix-engelmann/dranspose/issues"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

