[package]
name = "perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zmq = "0.4.0"
async-std =  {version = "1.12.0", features = ["attributes"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
redis = {version = "0.25.2", features = ["aio", "async-std-comp"] }
uuid =  {version = "1.8.0", features = ["v4", "fast-rng","macro-diagnostics", "serde"] }
