[package]
name = "fast_ingester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zmq = "0.4.0"
async-std =  {version = "1.12.0", features = ["attributes"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
redis = {version = "0.25.2", features = ["aio", "async-std-comp"] }
uuid =  {version = "1.8.0", features = ["v4", "fast-rng","macro-diagnostics", "serde"] }
futures = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
url = "2.5.0"
env_logger = "0.11.3"
log = "0.4.21"
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.17"
futures-util = "0.3.30"
